--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -10,6 +10,7 @@
     <sectionGroup name="cascadeCutomGroup">
       <section name="cascadeMenu" type="Cascade.Web.ApplicationIntegration.MenuHandler, Cascade.Web, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowLocation="true" allowDefinition="Everywhere" />
     </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=CascadeDB" providerName="System.Data.SqlClient" />
@@ -18,28 +19,28 @@
   <cascadeCutomGroup>
 
     <cascadeMenu>
-      <menu Id="1" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Recourse" Area="Recourse" />
-      <menu Id="2" Action="Index" Controller="Home" Roles="user,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="2" Text="Collections" Area="Collections" />
-      <menu Id="3" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="3" Text="Investor Mgt" Area="InvestorManagement" />
-      <menu Id="4" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="4" Text="Analytics &amp; Simulation" Area="AnalyticsSimulation" />
-      <menu Id="5" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="5" Text="Asset Sales" Area="AssetSales" />
-      <menu Id="6" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="0" SortOrder="6" Text="Acquisitions" Area="Acquisitions" />
-      <menu Id="7" Action="Index" Controller="ModuleDetails" Roles="user" IsVisible="false" IsActive="true" ParentId="6" SortOrder="1" Text="Module Details" Area="Acquisitions" />
-      <menu Id="8" Action="Index" Controller="DataEntry" Roles="user" IsVisible="false" IsActive="true" ParentId="6" SortOrder="2" Text="Data Entry" Area="Acquisitions" />
-      <menu Id="9" Action="Index" Controller="DPS" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="1" Text="DPS-Add Form" Area="Recourse" />
-      <menu Id="10" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="7" Text="Portfolio" Area="Portfolio" />
-      <menu Id="11" Action="Index" Controller="AddForm" Roles="user" IsVisible="false" IsActive="true" ParentId="10" SortOrder="1" Text="Add" Area="Portfolio" />
-      <menu Id="12" Action="ViewDPS" Controller="DPS" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="DPS-View/Edit" Area="Recourse" />
-      <menu Id="13" Action="MediaUpload" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="3" Text="Media Upload" Area="Recourse" />
-      <menu Id="14" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media Fulfillment" Area="Recourse"  Parameters="id" ParametersVals="ByAgency" />
-      <menu Id="15" Action="Index" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-Add" Area="Recourse" />
-      <menu Id="16" Action="ViewRecall" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="7" Text="Recall-View/Edit" Area="Recourse" />
-      <menu Id="17" Action="PutBackIndex" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="8" Text="Putback-Add" Area="Recourse" />
-      <menu Id="18" Action="ViewPutBack" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="9" Text="Putback-View/Edit" Area="Recourse" />
-      <menu Id="19" Action="Add" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="17" SortOrder="1" Text="Add Record" Area="People" />
-      <menu Id="20" Action="Add" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="18" SortOrder="1" Text="Add Record" Area="Money" />
-      <menu Id="21" Action="Index" Controller="ViewEdit" Roles="user" IsVisible="false" IsActive="true" ParentId="10" SortOrder="2" Text="View-Edit" Area="Portfolio" />
-      <menu Id="22" Action="Index" Controller="Home" Roles="user,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="7" Text="Compliance" Area="Compliance" />
+      <menu Id="1" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Recourse" Area="Recourse" />
+      <menu Id="2" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="2" Text="Collections" Area="Collections" />
+      <menu Id="3" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="0" SortOrder="3" Text="Investor Mgt" Area="InvestorManagement" />
+      <menu Id="4" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="0" SortOrder="4" Text="Analytics &amp; Simulation" Area="AnalyticsSimulation" />
+      <menu Id="5" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="0" SortOrder="5" Text="Asset Sales" Area="AssetSales" />
+      <menu Id="6" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="false" ParentId="0" SortOrder="6" Text="Acquisitions" Area="Acquisitions" />
+      <menu Id="7" Action="Index" Controller="ModuleDetails" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="6" SortOrder="1" Text="Module Details" Area="Acquisitions" />
+      <menu Id="8" Action="Index" Controller="DataEntry" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="6" SortOrder="2" Text="Data Entry" Area="Acquisitions" />
+      <menu Id="9" Action="Index" Controller="DPS" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="1" Text="DPS-Add Form" Area="Recourse" />
+      <menu Id="10" Action="Index" Controller="Home" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="0" SortOrder="7" Text="Portfolio" Area="Portfolio" />
+      <menu Id="11" Action="Index" Controller="AddForm" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="10" SortOrder="1" Text="Add" Area="Portfolio" />
+      <menu Id="12" Action="ViewDPS" Controller="DPS" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="DPS-View/Edit" Area="Recourse" />
+      <menu Id="13" Action="MediaUpload" Controller="Media" Roles="user,mediaAdmin,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="3" Text="Media Upload" Area="Recourse" />
+      <menu Id="14" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media Fulfillment" Area="Recourse"  Parameters="id" ParametersVals="ByAgency" />
+      <menu Id="15" Action="Index" Controller="Recall" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-Add Form" Area="Recourse" />
+      <menu Id="16" Action="ViewRecall" Controller="Recall" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="7" Text="Recall-View/Edit" Area="Recourse" />
+      <menu Id="17" Action="Index" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="false" ParentId="0" SortOrder="8" Text="People" Area="People" />
+      <menu Id="18" Action="Index" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="false" ParentId="0" SortOrder="9" Text="Money" Area="Money" />
+      <menu Id="19" Action="Add" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="false" ParentId="17" SortOrder="1" Text="Add Record" Area="People" />
+      <menu Id="20" Action="Add" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="false" ParentId="18" SortOrder="1" Text="Add Record" Area="Money" />
+      <menu Id="21" Action="Index" Controller="ViewEdit" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="10" SortOrder="2" Text="View-Edit" Area="Portfolio" />
+      <menu Id="22" Action="Index" Controller="Home" Roles="user,mediaAdmin,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="7" Text="Compliance" Area="Compliance" />
       <menu Id="23" Action="Index" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="22" SortOrder="1" Text="CFPB Complaints" Area="Compliance" />
       <menu Id="24" Action="Create" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="23" SortOrder="1" Text="Add New Customer Complaint" Area="Compliance" />
       <menu Id="25" Action="ReportNCRA" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="23" SortOrder="2" Text="New Complaint Requiring Action" Area="Compliance" />
@@ -49,24 +50,24 @@
       <menu Id="29" Action="ReportORP" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="23" SortOrder="6" Text="Owner Response In Progress" Area="Compliance" />
       <menu Id="30" Action="Index" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="23" SortOrder="7" Text="Response Submitted to Consumer" Area="Compliance" />
       <menu Id="31" Action="ReportRC" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="23" SortOrder="8" Text="Resolved Complaints" Area="Compliance" />
-      <menu Id="24" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="22" SortOrder="1" Text="CFPB Debt Buyer Processing" Area="Compliance" />
-      <menu Id="25" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="22" SortOrder="2" Text="BankruptcyProcessing" Area="Compliance" />
-      <menu Id="26" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="22" SortOrder="3" Text="Cascade Process Exceptions" Area="Compliance" />
-      <menu Id="27" Action="Create" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="1" Text="Create Complaint for Agency Action" Area="Compliance" />
-      <menu Id="28" Action="ReportNCRA" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="2" Text="New Complaint Requiring Action" Area="Compliance" />
-      <menu Id="29" Action="ReportNCP" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="3" Text="New Complaint In Progress" Area="Compliance" />
-      <menu Id="30" Action="ReportAAI" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="4" Text="Awaiting Additional Information" Area="Compliance" />
-      <menu Id="31" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="7" Text="Submitted for Agency Closure" Area="Compliance" />
-      <menu Id="32" Action="ReportRC" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="8" Text="Resolved Complaints" Area="Compliance" />
-      <menu Id="33" Action="ReportSOA" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="5" Text="Submitted for Owner Action" Area="Compliance" />
-      <menu Id="34" Action="ReportORP" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="6" Text="Owner Response In Progress" Area="Compliance" />
+      <menu Id="24" Action="Index" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="22" SortOrder="1" Text="CFPB Debt Buyer Processing" Area="Compliance" />
+      <menu Id="25" Action="Index" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="22" SortOrder="2" Text="BankruptcyProcessing" Area="Compliance" />
+      <menu Id="26" Action="Index" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="22" SortOrder="3" Text="Cascade Process Exceptions" Area="Compliance" />
+      <menu Id="27" Action="Create" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="1" Text="Create Complaint for Agency Action" Area="Compliance" />
+      <menu Id="28" Action="ReportNCRA" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="2" Text="New Complaint Requiring Action" Area="Compliance" />
+      <menu Id="29" Action="ReportNCP" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="3" Text="New Complaint In Progress" Area="Compliance" />
+      <menu Id="30" Action="ReportAAI" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="4" Text="Awaiting Additional Information" Area="Compliance" />
+      <menu Id="31" Action="Index" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="7" Text="Submitted for Agency Closure" Area="Compliance" />
+      <menu Id="32" Action="ReportRC" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="8" Text="Resolved Complaints" Area="Compliance" />
+      <menu Id="33" Action="ReportSOA" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="5" Text="Submitted for Owner Action" Area="Compliance" />
+      <menu Id="34" Action="ReportORP" Controller="Home" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="24" SortOrder="6" Text="Owner Response In Progress" Area="Compliance" />
       <menu Id="35" Action="Index" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Media" Area="Recourse" />
       <menu Id="36" Action="Create" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="1" Text="Request - By Individual Account" Area="Recourse" />
       <menu Id="37" Action="MediaRequestReadyDownload" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="2" Text="Media Ready For Download" Area="Recourse" />
       <menu Id="38" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="3" Text="Media Request Not Yet Fulfilled" Area="Recourse" Parameters="id" ParametersVals="ByAgency"/>
-      <menu Id="39" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Media Request" Area="Recourse" />
-      <menu Id="40" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="1" Text="Start New Request" Area="Recourse" />
-      <menu Id="41" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" Parameters="id" ParametersVals="All" />     
+      <menu Id="39" Action="Create" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Media Request" Area="Recourse" />
+      <menu Id="40" Action="Create" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="39" SortOrder="1" Text="Start New Request" Area="Recourse" />
+      <menu Id="41" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" Parameters="id" ParametersVals="All" />
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
@@ -78,6 +79,15 @@
     <add key="colorCodes" value="CC6600#9900CC#FF3300#0099FF#00CC66#FFFF00#CC6600#9900CC#800000#A52A2A#DC143c#FF6347#CD5C5C#F08080#FFA500#FFD700#B8860B#9ACD32#556B2F#00FF00#32CD32#90EE90#00FA9A#2E8B57#40E0D0#6495ED#1E90FF#191970#00008B#8A2BE2#8B008B#BA55D3#FF00FF#DA70D6#FF1493#F5F5DC#F5DEB3#8B4513#D2691E#D2B48C#708090#F5DEB3#BC8F8F#696969#808000#800080#008080#000080#FF0000#000000#FFFFFF" />
     <add key="defaultAgencyId" value="AACC" />
     <add key="uploadDocumentsDirectory" value="C:\Cascade\UploadedFiles"/>
+    <add key="errorConfigFilePath" value="C:\Users\jshah\Documents\GitHub\CascadeDevelopmentSolution\CascadeDevelopment-VS2010\CascadeSolution\Cascade.Web\Error.config"/>
+    <add key="Server.Hostname" value="smtp.test.com"/>
+    <add key="Server.Port" value="25"/>
+    <add key="Server.UseDefaultCredentials" value="false"/>
+    <add key="Server.CredentialsRequired" value="false"/>
+    <add key="Server.Username" value="serverxyz"/>
+    <add key="Server.Password" value="ZI5a5YwZoKV4vF2XKBqm"/>
+    <add key="emailSenderAccount" value="donotreplay@minedsystems.com"/>
+    <add key="emailOriginatorAccount" value="andrew.darling@minedsystems.com"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -157,4 +167,22 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <threshold value="ON"/>
+      <file value="c:\Cascade\Logs\ApplicationLog.txt"/>
+      <appendToFile value="true"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="100MB"/>
+      <rollingStyle value="Size"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5level|%date|%message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="RollingLogFileAppender"/>
+    </root>
+  </log4net>
 </configuration>
