--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -88,8 +88,18 @@
     <add key="Server.Password" value="ZI5a5YwZoKV4vF2XKBqm"/>
     <add key="emailSenderAccount" value="donotreplay@minedsystems.com"/>
     <add key="emailOriginatorAccount" value="andrew.darling@minedsystems.com"/>
+    <!--For Report Server-->
+    <add key="ReportsUserName" value="CSO\msi.reportrunner"/>
+    <add key="ReportsUserPassword" value="Pa$$word"/>
+    <add key="ReportsDomain" value="CSO"/>
+    <add key="ReportsServerURL" value="http://10.1.10.2/ReportServer"/>
+    <add key="ReportFolderPath" value="/Cascade/" />
   </appSettings>
   <system.web>
+
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" validate="false" />
+    </httpHandlers>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
