--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -68,6 +68,9 @@
       <menu Id="39" Action="Create" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Media Request" Area="Recourse" />
       <menu Id="40" Action="Create" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="39" SortOrder="1" Text="Start New Request" Area="Recourse" />
       <menu Id="41" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" Parameters="id" ParametersVals="All" />
+      <menu Id="43" Action="ReportsDPS" Controller="ViewEdit" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="8" Text="DPS Reports" Area="Recourse"/>
+      <menu Id="44" Action="ReportsMedia" Controller="ViewEdit" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="9" Text="Media Reports" Area="Recourse"/>
+      <menu Id="45" Action="ReportsRecall" Controller="ViewEdit" Roles="user,mediaAdmin" IsVisible="false" IsActive="true" ParentId="1" SortOrder="10" Text="Recall Reports" Area="Recourse"/>
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
